--- a/Paginas/css/contacto.css
+++ b/Paginas/css/contacto.css
@@ -1,8 +1,10 @@
 body{
-    background: url(9.JPG);
+    background: url(.JPG);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     padding: 0px 10%;
+    background: #979A9A;
+
 }
 .menu{
     list-style: none;
