--- a/css/pagina1.css
+++ b/css/pagina1.css
@@ -1,5 +1,5 @@
 body{
-    background: url(.JPG);
+    background: url(9.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     padding: 0px 10%;
